:bug: fix overflow problem for competitive tabs

--- a/src/styles/abstracts/_breakpoints.scss
+++ b/src/styles/abstracts/_breakpoints.scss
@@ -28,6 +28,12 @@
   }
 }
 
+@mixin min-lg {
+  @media screen and (width >= 1150px) {
+    @content;
+  }
+}
+
 @mixin xl {
   @media screen and (width <= 1700px) {
     @content;
